0.9.41
- Updates to infoline label handling
- Fix small landscape scrollbar/alphabet
- Fix aspectratio on square widget
- Fix season 2 info getting locked due to duplicate id

0.9.40
- Updates to landscape widget (now 4 horizontal with labels underneath)
- Updates to search menu (now completely customisable)
- Fix Similar tvshows
- Palette choice thanks to drinferno

0.9.39
- Match PVR Info with other info dialogs

0.9.38
- Re-add extended info button in osd
- Fix for single PVR info in multiwidget layout
- Option for numeric star rating
- Manage art/info menu in dialogvideoinfo
- Ken burns effect option

0.9.37
- Add fake landscape icon to Icon Wall view for square icons
- Preliminary Sets Info addition
- Fix for icon widgets stretching

0.9.36
- Fix for long season numbers
- Add 8 row simple list for pvr
- Add button id 10 for pvr info
- Set Roboto as default plotbox font
- Add linespacing variant for Roboto plot
- Fix for autovis

0.9.35
- Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
- Slightly increase pvr osd opacity
- Don't show pvr plot box if unavailable
- Option to disable geometric panels
- Add search button to fixed width 
- Slower blur transition

0.9.34
- New PVR osd info / controls
- New PVR osd guide
- New PVR channel switcher
- Change default setting to use standard labels for add-ons
- Change default setting to use pvr icons without colordiffuse

0.9.33
- Fixed-width text option for Basic and Horizontal Multi
- Make fixed-width basic home menu new default setting
- Fade unfocused list text
- Add tmdb rating
- Add option to disable autoscroll
- Play album
- TMDB
- Bump font weight for unfocused menu

0.9.32
- Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
- Only use star rating for library ratings as db rating might not be imdb
- Add aspectratio flags
- Fix widget limit none

0.9.31
- Hide poster/plot on osd now shows title and infoline
- Weather widget can focus